[gd_scene load_steps=19 format=3 uid="uid://bp8oxg5ks2kcq"]

[ext_resource type="Script" path="res://camera.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cd2taly43auyl" path="res://Items/Cube.tscn" id="5"]
[ext_resource type="Script" path="res://Controls.gd" id="7"]
[ext_resource type="Script" path="res://AnimatedCar.gd" id="10"]

[sub_resource type="BoxMesh" id="15"]
size = Vector3(60, 0.2, 60)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(1, 2, 60)

[sub_resource type="StandardMaterial3D" id="19"]
albedo_color = Color(0.133333, 1, 0, 1)

[sub_resource type="BoxMesh" id="20"]
size = Vector3(1.5, 1, 2.5)

[sub_resource type="CylinderMesh" id="21"]
top_radius = 0.3
bottom_radius = 0.3
height = 0.2

[sub_resource type="StandardMaterial3D" id="22"]
albedo_color = Color(0, 0.584314, 1, 1)

[sub_resource type="CylinderMesh" id="23"]
top_radius = 0.3
bottom_radius = 0.3
height = 0.2
radial_segments = 15

[sub_resource type="StandardMaterial3D" id="24"]
albedo_color = Color(1, 0.976471, 0, 1)

[sub_resource type="CylinderMesh" id="25"]
top_radius = 0.3
bottom_radius = 0.3
height = 0.2
radial_segments = 8

[sub_resource type="StandardMaterial3D" id="26"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="27"]
top_radius = 0.3
bottom_radius = 0.3
height = 0.2
radial_segments = 5

[sub_resource type="Animation" id="28"]
resource_name = "BlinkingLights"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftLight:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 1, 1), Color(1, 0, 0, 1), Color(0, 0, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightLight:light_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 1, 0, 1), Color(1, 1, 0, 1), Color(0, 1, 0, 1)]
}

[sub_resource type="Animation" id="29"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tt030"]
_data = {
"BlinkingLights": SubResource("28"),
"RESET": SubResource("29")
}

[node name="TestScene" type="Node3D"]

[node name="Controls" type="Node" parent="."]
script = ExtResource("7")

[node name="GlobalLODText" type="Label" parent="Controls"]
offset_left = 5.0
offset_top = 5.0
offset_right = 140.0
offset_bottom = 15.5722
pivot_offset = Vector2(85.1975, 7)
text = "Global LOD multiplier"

[node name="LineEdit" type="LineEdit" parent="Controls/GlobalLODText"]
layout_mode = 0
offset_left = 150.0
text = "1.0"

[node name="Camera3D FOV" type="Label" parent="Controls"]
offset_left = 5.0
offset_top = 40.0
offset_right = 139.476
offset_bottom = 50.7192
pivot_offset = Vector2(85.1975, 7)
text = "Camera3D FOV"

[node name="LineEdit" type="LineEdit" parent="Controls/Camera3D FOV"]
layout_mode = 0
offset_left = 100.0
text = "70"

[node name="Scene" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 0.837833, 0.545927, 0, -0.545927, 0.837833, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true
directional_shadow_max_distance = 200.0

[node name="Camera3D" type="Camera3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.24738, 0)
fov = 80.0
far = 8192.0
script = ExtResource("1")

[node name="Floor" type="MeshInstance3D" parent="Scene"]
mesh = SubResource("15")
skeleton = NodePath("../..")

[node name="Wall" type="MeshInstance3D" parent="Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.0612, 0.99377, 0)
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="Demo1_Switching" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.47256, 0, 4.54922)

[node name="Cubes" type="Node3D" parent="Demo1_Switching"]

[node name="Cube" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]

[node name="Cube2" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.0568447, -19.3774)

[node name="Cube3" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.9911)

[node name="Cube4" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.7828, 0, 0)

[node name="Cube5" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.13745, 0, 11.7014)

[node name="Cube6" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.66411, 0, -14.0952)

[node name="Cube7" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.458, 0, 0)

[node name="Cube8" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.87449, 0, 9.43333)

[node name="Cube9" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.97763, 0, -12.8135)

[node name="Cube10" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.19053, 0, 0)

[node name="Cube11" parent="Demo1_Switching/Cubes" instance=ExtResource("5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 17.3634)

[node name="Demo2_Signals" type="Node3D" parent="."]

[node name="AnimatedCar" type="Node3D" parent="Demo2_Signals"]
transform = Transform3D(-0.997873, 0, -0.0651822, 0, 1, 0, 0.0651822, 0, -0.997873, 4.99974, 0.35, 0.0504925)
script = ExtResource("10")

[node name="Model" type="LODObject" parent="Demo2_Signals/AnimatedCar"]
lod1_ratio = 20.0
lod3_ratio = 4.0

[node name="LOD0" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.517928, 0)
material_override = SubResource("19")
mesh = SubResource("20")

[node name="Wheel" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, -1.24968)
mesh = SubResource("21")

[node name="Wheel2" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, 1.24774)
mesh = SubResource("21")

[node name="Wheel3" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.745029, -0.479721, -1.24968)
mesh = SubResource("21")

[node name="Wheel4" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.745029, -0.479721, 1.24774)
mesh = SubResource("21")

[node name="LOD1" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.517928, 0)
visible = false
material_override = SubResource("22")
mesh = SubResource("20")

[node name="Wheel" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, -1.24968)
mesh = SubResource("23")

[node name="Wheel2" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, 1.24956)
mesh = SubResource("23")

[node name="Wheel3" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.747891, -0.479721, -1.24968)
mesh = SubResource("23")

[node name="Wheel4" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.747891, -0.479721, 1.24956)
mesh = SubResource("23")

[node name="LOD2" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.517928, 0)
visible = false
material_override = SubResource("24")
mesh = SubResource("20")

[node name="Wheel" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, -1.24968)
mesh = SubResource("25")

[node name="Wheel2" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, 1.24945)
mesh = SubResource("25")

[node name="Wheel3" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.744646, -0.479721, -1.24968)
mesh = SubResource("25")

[node name="Wheel4" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.744646, -0.479721, 1.24945)
mesh = SubResource("25")

[node name="LOD3" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.517928, 0)
visible = false
material_override = SubResource("26")
mesh = SubResource("20")

[node name="Wheel" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, -1.24968)
mesh = SubResource("27")

[node name="Wheel2" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.751611, -0.479721, 1.24828)
mesh = SubResource("27")

[node name="Wheel3" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.752037, -0.479721, -1.24968)
mesh = SubResource("27")

[node name="Wheel4" type="MeshInstance3D" parent="Demo2_Signals/AnimatedCar/Model/LOD3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.752037, -0.479721, 1.24828)
mesh = SubResource("27")

[node name="ImportanceLabel" type="Label3D" parent="Demo2_Signals/AnimatedCar/Model"]
transform = Transform3D(0.999999, -0.000780863, -0.000654337, 0.000780961, 1, 0.00014927, 0.000654221, -0.000149781, 1, 0, 1.76009, 0)
pixel_size = 0.02
text = "0.2
"

[node name="LeftLight" type="SpotLight3D" parent="Demo2_Signals/AnimatedCar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.591178, 0.584198, -1.48224)
light_color = Color(0, 0, 1, 1)
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
spot_range = 10.0

[node name="RightLight" type="SpotLight3D" parent="Demo2_Signals/AnimatedCar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.592008, 0.584198, -1.48224)
light_color = Color(0.0909091, 1, 0, 1)
light_energy = 2.0
shadow_enabled = true
shadow_reverse_cull_face = true
spot_range = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Demo2_Signals/AnimatedCar"]
libraries = {
"": SubResource("AnimationLibrary_tt030")
}
autoplay = "BlinkingLights"

[connection signal="text_submitted" from="Controls/GlobalLODText/LineEdit" to="Controls" method="_on_LodMultiplier_text_entered"]
[connection signal="text_submitted" from="Controls/Camera3D FOV/LineEdit" to="Controls" method="_on_fov_text_entered"]
